# LabPy

./: RayleighTest2.m  labbox  plottest.m  plottest2.m  start.m  startup.m
TF/: TF_test.m  TF_workshop.ipynb  TestLocalMinima.m  base.py  count_to_100.csv  log  nohup_test.py  test.ipynb  test_base.py
TF/markdown/: AdaptiveFilter.md  ButFilter.md  CCG.md  CCGSignif.md  CCGSignifConv.md  (+78 more)
funciton_calls/: analyzeDependencies.m  funciton_calls_TF.ipynb  function_calls.csv  function_to_module.csv  plotDependencyGraph.m
inbox/: activating shared conda env.md
src/: README.md  pyproject.toml  setup.py
src/.github/workflows/: ci.yml
src/tf_toolbox/: __init__.py  pytest.ini
src/tf_toolbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tf_toolbox/connectivity/: __init__.py  ccg.py  ccg_stats.py  spike_field.py
src/tf_toolbox/oscillations/: __init__.py  gamma.py  theta.py
src/tf_toolbox/plotting/: connectivity_plots.py  spectral_plots.py  timefreq_plots.py
src/tf_toolbox/spectral/: __init__.py  classical.py  harmonics.py  multitaper.py
src/tf_toolbox/states/: __init__.py  eeg_states.py
src/tf_toolbox/tests/: conftest.py  test_connectivity.py  test_connectivity_placeholders.py  test_oscillations.py  test_spectral.py  test_spectral_classical.py  test_states.py  test_timefreq.py  test_utils.py  test_utils_filtering.py  test_utils_peaks.py
src/tf_toolbox/timefreq/: __init__.py  coherencegram.py  comodulogram.py  hilbert.py  spectrogram.py
src/tf_toolbox/utils/: __init__.py  args.py  checks.py  dsp.py  filtering.py  find_funcion.py  peaks.py
(+1154 files in other folders)
